fix: project operator & some opts
- opt : better shell
- opt : project columns in order
- add : disc meta files